--- a/style.css
+++ b/style.css
@@ -15,15 +15,17 @@
   --fs-p-l: 1.313rem;
   --fs-p-m: 1rem;
   --fs-p-s: 0.875rem;
-  --fs-h1-s: 4rem;
+  --fs-h1-s: 5rem;
   --fs-h2-s: 2.5rem;
   --fs-h3-s: 2rem;
 
-  --clr-dark: #171717;
-  --clr-light: #fefaee;
+  --clr-dark: #121e27;
   --clr-red: #9c356d;
   --clr-yellow: #fcd68b;
   --clr-orange: #f9784c;
+  --clr-light: #fefaee;
+
+  --bg-grd: ;
 }
 
 html {
@@ -34,7 +36,7 @@ body {
   margin: 0;
   font-family: var(--ff-primary);
   line-height: 1.6;
-  background: linear-gradient(var(--clr-yellow), #fff);
+  background-image: var(--clr-light);
 }
 
 img {
@@ -55,6 +57,7 @@ h1 {
   background-color: var(--clr-orange);
   padding: 0.5em 1.5em;
   border-radius: 100px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .btn:hover,
@@ -62,6 +65,11 @@ h1 {
   opacity: 0.75;
 }
 
+.btn_action {
+  background-color: var(--clr-light);
+  color: var(--clr-orange);
+  border: 2px solid var(--clr-orange);
+}
 section {
   padding: 2em 0;
 }
@@ -73,11 +81,15 @@ section {
 }
 
 p {
+  color: var(--clr-dark);
+}
+
+.light > * {
   color: var(--clr-light);
 }
 
 header {
-  background: var(--clr-dark);
+  background-color: #171717;
   padding: 1em 0;
   text-align: center;
 }
@@ -145,7 +157,7 @@ header {
 .nav__list--secondary {
   display: flex;
   justify-content: center;
-  gap: 0.5em;
+  gap: 1em;
 }
 
 .nav__item {
@@ -188,8 +200,7 @@ header {
 
 .hero {
   padding: 6rem 0;
-  background-color: var(--clr-yellow);
-  color: var(--clr-light);
+  background: var(--clr-yellow);
 }
 
 .hero_toptitle {
@@ -202,11 +213,6 @@ header {
   margin-bottom: 1rem;
 }
 
-.about__img {
-  display: block;
-  margin: 2em auto;
-}
-
 .hero_subtitle {
   margin-top: 0;
 }
@@ -216,6 +222,10 @@ header {
 }
 
 /* About section style */
+
+.about {
+  background-color: #171717;
+}
 
 .section_toptitle {
   color: var(--clr-orange);
@@ -231,32 +241,41 @@ header {
   margin-bottom: 1rem;
 }
 
-.about {
-  background-color: #9c356d;
+.about__img {
+  display: block;
+  margin: 2em auto;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .text_container {
   text-align: justify;
   line-height: 1.4;
 }
+.text_container > p {
+  color: var(--clr-light);
+}
 
 /* My work */
 
+.work {
+  background-color: var(--clr-yellow);
+}
 .cards_container {
   display: flex;
-  align-items: center;
+  /* align-items: center; */
   flex-direction: column;
   gap: 2rem;
 }
-
 .card {
-  background-color: var(--clr-yellow);
+  background-color: var(--clr-light);
   border: 1px solid #ddd;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   padding: 1rem;
   max-width: 500px;
-  flex: 1;
+  /* min-height: 90%; */
+  /* flex: 1; */
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -296,7 +315,7 @@ header {
 }
 /* Contact style*/
 .contact {
-  background-color: crimson;
+  background-color: var(--clr-dark);
   text-align: center;
 }
 
@@ -309,7 +328,7 @@ header {
 .footer {
   text-align: center;
   padding: 0.5em;
-  background-color: #171717;
+  background-color: var(--clr-dark);
 }
 
 /* Media query - pentru ecran mare, peste 800px  */
@@ -370,11 +389,19 @@ header {
   .cards_container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    grid-column: span;
     gap: 10%;
   }
-  .card {
-    justify-self: center;
+
+  .card_body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
+
+  /* .card {
+    justify-self: center;
+  } */
   .contact {
     text-align: left;
   }
