added swiper + new weather app

--- a/css/style.css
+++ b/css/style.css
@@ -231,7 +231,7 @@ header {
 /* About section style */
 
 .about {
-  background-color: var(--clr-dark);
+  background-color: var(--clr-light);
 }
 
 .section_toptitle {
@@ -244,13 +244,13 @@ header {
   text-align: center;
   line-height: 1.2;
   font-size: var(--fs-h2-s);
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 
 .about__img {
   display: block;
   margin: 2em auto;
-  border-radius: 5px;
+  border-radius: 0.5rem;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
@@ -258,39 +258,120 @@ header {
   text-align: justify;
   line-height: 1.4;
 }
-.text_container > p {
+/* .text_container > p {
   color: var(--clr-light);
-}
+} */
 
 /* My work */
 
 .work {
+  min-height: 90vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: var(--clr-yellow);
 }
-.cards_container {
-  display: flex;
-  /* align-items: center; */
-  flex-direction: column;
-  gap: 2rem;
+
+/* swiper */
+
+.swiper {
+  /* height: 100vh; */
+  overflow: hidden;
+  margin-bottom: 2rem;
 }
 .card {
+  border-radius: 2rem;
   background-color: var(--clr-light);
-  border: 1px solid #ddd;
-  border-radius: 5px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  padding: 1rem;
-  max-width: 500px;
 }
 
-.card:hover {
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.35);
+.image-content,
+.card-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0.5rem 1rem;
+}
+.image-content {
+  position: relative;
+  row-gap: 0.5rem;
+  padding: 2rem 0;
+}
+.overlay {
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background-color: var(--clr-orange);
+  border-radius: 2rem 2rem 0 2rem;
 }
 
-.card_body img {
-  max-width: 100%;
-  height: auto;
-  border-radius: 5px 5px 0 0;
+.overlay::before,
+.overlay::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  bottom: -3rem;
+  height: 3rem;
+  width: 3rem;
+  background-color: var(--clr-orange);
+  outline: none;
+  box-shadow: none;
 }
+.overlay::after {
+  border-radius: 0 2rem 0 0;
+  background-color: var(--clr-light);
+}
+.card-image {
+  position: relative;
+  height: 400px;
+  padding: 0.5rem;
+}
+.card-image .card-img {
+  height: 100%;
+  width: 100%;
+  border-radius: 5%;
+  object-fit: cover;
+  border: 2px solid var(--clr-light);
+}
+.name {
+  font-size: 1.25rem;
+  font-weight: 500;
+  color: var(--clr-dark);
+}
+.description {
+  font-size: 0.9rem;
+  color: #707070;
+  text-align: center;
+  height: 100px;
+}
+
+.swiper-button-next,
+.swiper-button-prev {
+  transition: transform 0.3s ease;
+  color: #fa7c52;
+}
+
+.swiper-button-next:hover,
+.swiper-button-prev:hover {
+  transform: scale(1.2);
+  color: var(--clr-orange);
+}
+.swiper-button-next {
+  right: -2rem;
+  color: var(--clr-orange);
+}
+.swiper-button-prev {
+  left: -2rem;
+  color: var(--clr-orange);
+}
+.swiper-pagination-bullet {
+  background-color: #fa7c52;
+}
+.swiper-pagination-bullet-active {
+  background-color: var(--clr-orange);
+}
+/* swiper end */
 
 .btn:hover span {
   right: 0;
@@ -320,21 +401,35 @@ header {
   text-align: center;
 }
 
+.contact_card {
+  text-align: center;
+  background-color: var(--clr-orange);
+  border-radius: 2rem;
+  margin-bottom: 1rem;
+  padding: 0.5em 1.5em;
+  box-shadow: 0 2px 4px rgba(255, 255, 255, 0.3);
+}
 .link {
   text-decoration: none;
   color: var(--clr-light);
+  font-weight: 500;
+
+  border-radius: 20px;
+}
+.link * {
+  text-align: center;
 }
 
 /* Footer style */
 .footer {
   text-align: center;
   padding: 0.5em;
-  border-top: 2px solid var(--clr-yellow);
+  border-top: 2px solid var(--clr-orange);
   background-color: var(--clr-dark);
 }
 
 /* Media query - pentru ecran mare, peste 800px  */
-@media (min-width: 800px) {
+@media (min-width: 768px) {
   body {
     line-height: 1.6;
   }
@@ -398,16 +493,29 @@ header {
     gap: 10%;
     padding: 2em 0;
   }
-
   .card_body {
+    object-fit: cover;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
   }
-  /* .card {
-    justify-self: center;
-  } */
+
+  .swiper-button-next {
+    right: -2.5rem;
+  }
+  .swiper-button-prev {
+    left: -2.5rem;
+  }
   .contact {
     text-align: left;
+  }
+  .contact_links {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+  }
+  .contact_card {
+    flex: 1;
+    letter-spacing: 0.1em;
   }
 }
