--- a/css/style.css
+++ b/css/style.css
@@ -210,11 +210,12 @@ header {
 .hero {
   height: 72vh;
   background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
   background-image: linear-gradient(
       0deg,
-      rgba(0, 0, 0, 0.9) 0%,
-      rgba(0, 0, 0, 0) 90%
+      rgba(0, 0, 0, 0.8) 0%,
+      rgba(0, 0, 0, 0.2) 100%
     ),
     url("/assets/hero.jpg");
 }
